fix contrast
https://github.com/vesoft-inc/nebula-studio/issues/770

--- a/app/pages/Console/OutputBox/index.module.less
+++ b/app/pages/Console/OutputBox/index.module.less
@@ -23,10 +23,10 @@
       border-radius: 6px;
       padding: 11px 14px;
       cursor: pointer;
-      font-family: Roboto-Regular, sans-serif;
+      font-family: Consolas, "Courier New", monospace;
       font-weight: 500;
       font-size: 18px;
-      color: #00bfa5;
+      color: #111;
     }
 
     .gqlValue {
